--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@
 
 .signs_2 {
 	width: 75px;
-	background-color: lightgray;
+	background-color: green;
 }
 
 .signs_2 > div, .signs_2 > div > button {
