--- a/style.css
+++ b/style.css
@@ -73,6 +73,7 @@
 .numbers > div, .numbers > div > button {
 	width: 75px;
 	height: 50px;
+	background-color: white;
 }
 
 
@@ -83,5 +84,4 @@
 .signs_2 > div, .signs_2 > div > button {
 	width: 75px;
 	height: 50px;
-	background-color: green;
 }
