--- a/style.css
+++ b/style.css
@@ -74,9 +74,14 @@
 	width: 75px;
 	height: 50px;
 	background-color: white;
-	border: 1px;
 }
 
+.numbers > div > button {
+	width: 75px;
+	height: 50px;
+	background-color: white;
+	border: 1px solid black;
+}
 
 .signs_2 {
 	width: 75px;
